[project]
name = "markdown-image-downloader"
version = "0.1.0"
description = "A tool to download and organize images referenced in markdown files"
authors = [{ name = "mufidu", email = "mufid.to@gmail.com" }]
dependencies = ["pillow>=11.0.0", "tqdm>=4.66.5"]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
keywords = ["markdown", "image", "downloader", "automation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/mufidu/markdown-image-downloader"
Repository = "https://github.com/mufidu/markdown-image-downloader.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/index"]
